--- a/public/startersquad/dubbing/index.html
+++ b/public/startersquad/dubbing/index.html
@@ -321,18 +321,19 @@
 
             <div>
               <div class="col-12 d-inline-block pr-4">
-                <img src="/images/squaddub.png"  style="max-width:100%">
-<body style="text-align:center">
+                <img src="/images/squaddub.PNG"  style="max-width:100%">
+
+<div style="text-align:center">
 <br><br><h4>Want to dub Starter Squad into another language?  This should help!</h4>
 <br>This pack features each Episode without a dialogue track and its accompanying script.  
 <br>(Note that the final dialogue mix sometimes differs from the original script.)
 <br>You are free to dub and upload these with your own audio added.
 <br>Just be sure to credit me (Shippiddge) and link to my YouTube channel (Youtube.com/Shippiddge).
 <br>
-</body>
+</div>
 
-
-<body><h3 class="mt-5 mb-1" style="font-family: 'Lucida Console'">
+<div style="text-align:center">
+<h3 class="mt-5 mb-1" style="font-family: 'Lucida Console'">
 <a href="https://drive.google.com/file/d/1CcvDyMPo4rfoFxaDaIz3ZdeJ_fi292Jr/view?usp=sharing">Episode 1 (NO VOICE)</a> >>> <a href="https://drive.google.com/file/d/1zcSmhlXlOMOON6jSYfLqevE6UNNJ6onv/view?usp=sharing">Episode 1 Script</a>
 <br><br>
 <a href="https://drive.google.com/file/d/164CL3HrS2iIyl7UDQW0LI5ljh6_VV5Xq/view?usp=sharing">Episode 2 (NO VOICE)</a> >>> <a href="https://drive.google.com/file/d/1AkTimqKn3cchuEzwjAttJw4tYvV0Cxnx/view?usp=sharing">Episode 2 Script</a>
@@ -354,7 +355,9 @@
 <a href="https://drive.google.com/file/d/1oEhIhX_roVp0y4H3J3fngSKsYFIJ-dxV/view?usp=sharing">Episode 10 (NO VOICE)</a> >>> <a href="https://drive.google.com/file/d/1Z-_EugnwSLqVmqe3DONZA6GFtjTow4FY/view?usp=sharing">Episode 10 Script</a>
 <br><br>
 <a href="https://drive.google.com/file/d/1Cm3no6yXQNq0Na8HiO1JzqwLfdQFCUjy/view?usp=sharing">Episode 11 (NO VOICE)</a> >>> <a href="https://drive.google.com/file/d/1M1bgkyHSkGyc69404g02QTIkQgBo8SH5/view?usp=sharing">Episode 11 Script</a>
-<h3></body>
+<h3>
+
+</div>
               </div>
             </div>
 
