--- a/content/startersquad/dubbing/dubbing00.html
+++ b/content/startersquad/dubbing/dubbing00.html
@@ -1,6 +1,6 @@
-
-<img src="/images/squaddub.PNG"  style="max-width:100%">
-
+<div style="text-align:center">
+<img src="/images/squadDub.PNG"  style="max-width:100%">
+</div>
 <div style="text-align:center">
 <br><br><h4>Want to dub Starter Squad into another language?  This should help!</h4>
 <br>This pack features each Episode without a dialogue track and its accompanying script.  
