--- a/public/startersquad/dubbing/index.html
+++ b/public/startersquad/dubbing/index.html
@@ -321,8 +321,9 @@
 
             <div>
               <div class="col-12 d-inline-block pr-4">
-                <img src="/images/squaddub.PNG"  style="max-width:100%">
-
+                <div style="text-align:center">
+<img src="/images/squadDub.PNG"  style="max-width:100%">
+</div>
 <div style="text-align:center">
 <br><br><h4>Want to dub Starter Squad into another language?  This should help!</h4>
 <br>This pack features each Episode without a dialogue track and its accompanying script.  
